<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.WelcomeFragment">
    <!--
    Used ConstraintLayout to put next button in bottom right screen,
    and welcome text and description in center with chain style packed.
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_16dp"
            android:text="@string/welcome"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_16dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_16dp"
            android:text="@string/welcome_description"
            android:textSize="@dimen/_18sp"
            app:layout_constraintBottom_toTopOf="@id/buttonNext"
            app:layout_constraintTop_toBottomOf="@id/titleWelcome" />

        <Button
            android:id="@+id/buttonNext"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_55dp"
            android:layout_marginVertical="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
