<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.LoginFragment">
   <!--
   Used ConstraintLayout to put email and password Edittext and two buttons (login - create account)
   with chain style packed.
   -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_16dp">

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/inputEmailLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:hint="@string/email"
            app:hintTextColor="@color/text_grey_color"
            app:layout_constraintBottom_toTopOf="@id/inputPasswordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLogin"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/text_grey_color"
            app:hintTextColor="@color/text_grey_color"
            app:layout_constraintBottom_toTopOf="@id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEmailLayout"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/primary_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55dp"
            android:layout_marginTop="@dimen/_16dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            app:layout_constraintBottom_toTopOf="@id/buttonCreateAccount"
            app:layout_constraintTop_toBottomOf="@id/inputPasswordLayout" />

        <Button
            android:id="@+id/buttonCreateAccount"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:text="@string/create_account"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
